# bg2vec

./: 0.Preprocessing.ipynb  1. Bi-MNTP Training.ipynb  2. SimCSE Training .ipynb  3. Eval-MTEB.ipynb  Bg2Vec-MNTP.ipynb  README.md  install-requirements.sh  pyproject.toml  requirements.txt
bg2vec/: __init__.py  arguments.py  data_util.py  metrics.py  model.py  preprocessing.py  training.py
model_configurations/: bggpt-7b-simcse.json  bggpt-7b.json
tests/: test_preprocessing.py  test_simcse_collator.py  test_simcse_loss.py
